--- a/code/js-collection/floating-comment-board/float_window.html
+++ b/code/js-collection/floating-comment-board/float_window.html
@@ -76,4 +76,15 @@ function slide(){
     } 
 } 
 </script>
+
+<script type='text/javascript'>
+(function() {
+    var c = document.createElement('script'); 
+    c.type = 'text/javascript';
+    c.async = true;
+    c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.clicki.cn/boot/43026';
+    var h = document.getElementsByTagName('script')[0];
+    h.parentNode.insertBefore(c, h);
+})();
+</script>
 </html>
